<resources>
    <string name="app_name">PSGroupProjectEXO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="healthyApp">HealthyApp</string>
    <string name="register">Register</string>
    <string name="not_registered">Not Registered?</string>
    <string name="click_here">Click Here</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="hintEmail">JohnMurphy@gmail.com</string>
    <string name="passwordHint">Enter Password</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="have_an_account">Have an account?</string>
    <string name="Confirm_password">confirm password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_register_with">Or Register with</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for google-->
    <string name="google_client_id">232429356977-71eteihhphkqsj648e7i8dcevv44t1lp.apps.googleusercontent.com</string>

    <!-- String used for firebase -->
    <string name="web_client_id" translatable="false">232429356977-71eteihhphkqsj648e7i8dcevv44t1lp.apps.googleusercontent.com</string>

    <!-- Strings used for facebook -->
    <string name="facebook_app_id">1929849844140306</string>
    <string name="fb_login_protocol_scheme">fb1929849844140306</string>
    <string name="facebook_client_token">aebeb28b1005878568d07c1fc00d9776</string>

    <!-- String used for X -->
    <string name="twitter_consumer_key">TWhFam9DQUFVVEhaVGticTBGYWE6MTpjaQ</string>
    <string name="twitter_consumer_secret">Z_AWa9LL1-Y9z79RoIEoNrMpF92VmEkJN5VTqaGo691BECpzgG</string>
    <string name="signOut">Sign Out</string>

    <!-- Strings used for main_activity -->
    <string name="personal_details">Personal Details</string>
    <string name="subscription">Subscription</string>
    <string name="health_assessment">Health Risk Assessment</string>
    <string name="contact_gp_or_ins">Contact GP or Insurance Company</string>
    <string name="review">Review the App</string>
    <string name="contact_us">Customer Support</string>

    <!-- Strings used for Personal Details activity -->
    <string name="gp_information">GP Information</string>
    <string name="insurance_info">Insurance Company Information</string>
    <string name="medical_history">Medical History</string>
    <string name="back">Back</string>


    <!-- Strings used for Stripe -->
    <string name="stripe_publishable_key">pk_test_51PMYd603iebvTiWJ6BKgGZnL4enCw8jSbs1Fx8fEOQDocLeRfJuHG49pTELGNFEORrqd0vypDLB6YPmdW93wfY3C00feg3YiwP</string>
    <string name="title_activity_main2">MainActivity2</string>


    <!-- Strings used for GP Info -->
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="enter_practice_name">Enter Practice Name</string>
    <string name="practice_name">Practice Name</string>
    <string name="enter_gp_s_name">Enter GP\'s Name</string>
    <string name="name_of_current_gp">Name of Current GP</string>
    <string name="options">Options</string>
    <string name="enter_gp_address">GP\'s Address</string>
    <string name="enter_gp_phone_number">GP\'s Phone Number</string>
    <string name="name_of_gp_practice">Enter GP\'s Practice</string>


    <!-- Strings used for Insurance Details -->
    <string name="enter_insurance_company_name">Enter insurance company name</string>
    <string name="name_of_insurance_company">Name of Insurance Company</string>
    <string name="enter_policy_number">Enter Policy Number</string>
    <string name="insurance_policy_number">Insurance Policy Number</string>
    <string name="enter_insurance_type">Enter Insurance Type</string>
    <string name="insurance_type">Insurance Type</string>
    <string name="enter_coverage_details">Enter Coverage Details</string>
    <string name="coverage_details">Coverage Details</string>
    <string name="enter_coverage_amount">Enter Coverage Amount</string>
    <string name="coverage_amount">Coverage Amount</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_premium_amount">Enter Premium Amount</string>
    <string name="premium_amount">Premium Amount</string>
    <string name="enter_payment_frequency">Enter Payment Frequency</string>
    <string name="payment_frequency">Payment Frequency</string>
    <string name="enter_policy_holder_name">Enter Policy Holder Name</string>
    <string name="policy_holder_name">Policy Holder Name</string>
    <string name="enter_agent_broker_name">Enter Agent Broker Name</string>
    <string name="agent_broker_name">Agent Broker Name</string>
    <string name="enter_agent_broker_contact">Enter Agent Broker Contact</string>
    <string name="agent_broker_contact">Agent Broker Phone Number</string>
    <string name="enter_claims_contact">Enter Claims Contact</string>
    <string name="claims_contact">Claims Contact Number</string>
    <string name="insurance_information">Insurance Information</string>


    <!-- Strings used for medical history -->
    <string name="past_medical_history">Past Medical History</string>
    <string name="smoking">Smoking</string>
    <string name="obesity">Obesity</string>
    <string name="family_history_of_cancer">Family History of Cancer</string>
    <string name="high_cholesterol">High Cholesterol</string>
    <string name="diabetes">Diabetes</string>
    <string name="high_blood_pressure">High Blood Pressure</string>
    <string name="physical_inactivity">Physical Inactivity</string>
    <string name="poor_diet">Poor Diet</string>
    <string name="contact_your_healthcarers">Contact Your Healthcarers</string>
    <string name="gp_phone_number">GP Phone Number</string>
    <string name="call_gp">Call GP</string>
    <string name="insurance_phone_number">Insurance Phone Number</string>
    <string name="call_insurance">Call Insurance</string>
    <string name="review_the_app">Review The App</string>
    <string name="rate_us">Rate us!</string>
    <string name="submit">Submit</string>
    <string name="provide_additional_feedback_here">Provide additional feedback here</string>
    <string name="call_us">Call us</string>
    <string name="email_support_example_com">Email: support@example.com</string>
    <string name="please_enter_additional_information">Please enter additional information</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="paid">Paid</string>
    <string name="please_wait_while_the_bill_is_loading">Please wait while the bill is loading</string>

</resources>