<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/BlueMedical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:id="@+id/gp_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto"
            android:orientation="vertical"
            android:layout_below="@id/healthyTextLayout">
            <!-- GP Name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/name_of_current_gp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_gp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_gp_s_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <!-- Practice Name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/practice_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_gp_practice_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_practice_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <!-- Address -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_gp_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp" />

            <!-- Phone Number -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_gp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:minHeight="48dp" />

            <!-- Email Address -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/email_address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/form_gp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/healthyTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/healthyAppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nova_round"
                android:shadowColor="#4C4040"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="8"
                android:text="@string/healthyApp"
                android:textColor="@color/pinkMedical"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/backLayout" >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:contentDescription="@string/options"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="320dp"
                android:backgroundTint="@color/pinkMedical"
                android:src="@drawable/baseline_menu_24"
                app:backgroundTint="@color/white"

                />



        </LinearLayout>


        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="240dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/pinkMedical"
                android:fontFamily="@font/roboto"
                android:shadowColor="#4C4040"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="30"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
